<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/fragmentLayout">
    <android.support.constraint.ConstraintLayout
            android:background="@drawable/week_item_look"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:gravity="left|center"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:id="@+id/dayLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:text="@string/day"
                android:textColor="#2e2e2e"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/dayName"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"/>
        <ListView
                android:longClickable="true"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/eventListView"
                app:layout_constraintTop_toBottomOf="@id/dayName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:divider="@android:color/transparent"
                android:dividerHeight="6dp"
                app:layout_constraintBottom_toTopOf="@id/addEventBtn"
                android:layout_marginBottom="5dp"/>
        <Button
                android:background="@drawable/add_event_btn_look"
                android:text="@string/add_event"
                android:textColor="#5b5b5b"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:id="@+id/addEventBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="sans-serif"
                android:textAllCaps="false"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:id="@+id/moveLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#7b262626">
        <Button
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:id="@+id/moveEventUpBtn"
                android:background="@drawable/move_btn_look"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:padding="6dp"
                android:text="@string/up"
                app:layout_constraintVertical_bias="1.0"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/deleteEventBtn"
                android:layout_marginRight="8dp"/>
        <Button
                android:text="@string/delete"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:id="@+id/deleteEventBtn"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/move_btn_look"/>
        <Button
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:id="@+id/doneEventBtn"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/move_btn_look"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:text="@string/done"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginLeft="8dp"/>
        <Button
                android:layout_width="77dp"
                android:layout_height="45dp"
                android:id="@+id/moveEventDownBtn"
                android:background="@drawable/move_btn_look"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:padding="6dp"
                android:text="@string/down"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/doneEventBtn"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>